# HW1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark.c  benchmark.cpp  dgemm-blas.c  dgemm-blocked.c  dgemm-naive.c  dgemm-team.c  job.in
